--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.3'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb:2.7.5'
+
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
 
 test {
